🆕 feat: CRUD credential API
